; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/octeon/extr_cvmx-pko.c_cvmx_pko_rate_limit_packets.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/octeon/extr_cvmx-pko.c_cvmx_pko_rate_limit_packets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.cvmx_pko_mem_port_rate0 = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32, i64 }
%union.cvmx_pko_mem_port_rate1 = type { i64 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@CVMX_PKO_MEM_PORT_RATE0 = common dso_local global i32 0, align 4
@CVMX_PKO_MEM_PORT_RATE1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cvmx_pko_rate_limit_packets(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %union.cvmx_pko_mem_port_rate0, align 8
  %8 = alloca %union.cvmx_pko_mem_port_rate1, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to i64*
  store i64 0, i64* %9, align 8
  %10 = load i32, i32* %4, align 4
  %11 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to %struct.TYPE_5__*
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = call %struct.TYPE_6__* (...) @cvmx_sysinfo_get()
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %5, align 4
  %17 = sdiv i32 %15, %16
  %18 = sdiv i32 %17, 16
  %19 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to %struct.TYPE_5__*
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to %struct.TYPE_5__*
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 2
  store i64 0, i64* %22, align 8
  %23 = bitcast %union.cvmx_pko_mem_port_rate1* %8 to i64*
  store i64 0, i64* %23, align 8
  %24 = load i32, i32* %4, align 4
  %25 = bitcast %union.cvmx_pko_mem_port_rate1* %8 to %struct.TYPE_4__*
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  %27 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to %struct.TYPE_5__*
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %6, align 4
  %31 = mul nsw i32 %29, %30
  %32 = ashr i32 %31, 8
  %33 = bitcast %union.cvmx_pko_mem_port_rate1* %8 to %struct.TYPE_4__*
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* @CVMX_PKO_MEM_PORT_RATE0, align 4
  %36 = bitcast %union.cvmx_pko_mem_port_rate0* %7 to i64*
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @cvmx_write_csr(i32 %35, i64 %37)
  %39 = load i32, i32* @CVMX_PKO_MEM_PORT_RATE1, align 4
  %40 = bitcast %union.cvmx_pko_mem_port_rate1* %8 to i64*
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @cvmx_write_csr(i32 %39, i64 %41)
  ret i32 0
}

declare dso_local %struct.TYPE_6__* @cvmx_sysinfo_get(...) #1

declare dso_local i32 @cvmx_write_csr(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
